plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.liquibase.gradle' version '2.2.2'
}

ext {
    mapstructVersion = "1.5.5.Final"
}
group = 'org.example'
version = '0.0.1-SNAPSHOT'
description = 'MoviesPlatform'

version = '0.0.1-SNAPSHOT'
description = 'coffeeshop'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}
dependencies {
    // spring
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // db
    implementation 'org.liquibase:liquibase-core:4.24.0'
    runtimeOnly 'org.postgresql:postgresql'

    // documentation
    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0")
    implementation 'org.springframework.security:spring-security-crypto'

    // --- LOMBOK & MAPSTRUCT FIX ---

    // 1. Lombok compile-only (Kodu yazmaq üçün)
    compileOnly 'org.projectlombok:lombok'

    // 2. MapStruct kitabxanası
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"

    // 3. ANNOTATION PROCESSOR ARDICILLIĞI (ÇOX VACİBDİR)

    // A. Əvvəlcə Lombok processor işləməlidir (Getter/Setter yaratmaq üçün)
    annotationProcessor 'org.projectlombok:lombok'

    // B. Lombok və MapStruct arasındakı əlaqə (Binding)
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // C. Sonda MapStruct processor işləməlidir (Hazır metodları görmək üçün)
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

    // testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


tasks.named('test') {
    useJUnitPlatform()
}